--- a/Jokenpo-Navegador copy/index.html
+++ b/Jokenpo-Navegador copy/index.html
@@ -14,7 +14,7 @@
 
     <div id="pvpEpvb">
         <button class="chosePvp" id="pvpButton" onclick="PvpDisappear()">Pvp mode</button>
-        <button class="chosePvb" id="pvbButton" onclick="PvbDisappear();">Pvb mode</button>
+        <button class="chosePvb" id="pvbButton" onclick="PvbDisappear()">Pvb mode</button>
     </div>
 
     <div id="nomeDosJogadores">
@@ -23,9 +23,9 @@
     </div>
 
     <div id="opções">
-        <img src="./test/Papel.png" id="papel" onclick="" value="papel">
-        <img src="./test/Rock.png" id="pedra" onclick="" value="pedra">
-        <img src="./test/Tesoura.png" id="tesoura" onclick="teste(this)" value="tesoura">
+        <img src="./test/Papel.png" id="papel">
+        <img src="./test/Rock.png" id="pedra">
+        <img src="./test/Tesoura.png" id="tesoura">
     </div>
     
     <div>
