--- a/Jokenpo-Navegador/index.html
+++ b/Jokenpo-Navegador/index.html
@@ -22,16 +22,23 @@
         <input id="enviarNomeDoPlayer1" type="submit" placeholder="Digite seu nome" onclick="ArmazenarNome();">
     </div>
 
-    <div id="opções">
-        <img src="./test/Papel.png" id="papel" onclick="" value="papel">
-        <img src="./test/Rock.png" id="pedra" onclick="" value="pedra">
-        <img src="./test/Tesoura.png" id="tesoura" onclick="teste(this)" value="tesoura">
+    <div id="opções" class="opções">
+        <button src="./test/Papel.png" id="Papel" class="Papel"onclick=""></button>
+        <button src="./test/Rock.png" id="Pedra" class="Pedra" onclick=""></button>
+        <button src="./test/Tesoura.png" id="Tesoura" class="Tesoura" onclick=""></button>
     </div>
     
     <div>
         <button id="pgInicial" onclick="AtualizarPagina()">Voltar</button>
-        <button id="jogar">Jogar</button>
+        <button id="jogar" onclick="JogarButtonPvb()">Jogar</button>
     </div>
+
+<div id="resutadoFinalPvb">
+    <h2>Escolha Do Player: <span id="user-choice"></span></h2>
+    <h2>Escolha Do bot: <span id="escolhaDoBot"></span></h2>
+    <h2>Resultado: <span id="resultado"></span></h2>
+</div>
+    
 
     <script src="script.js"></script>
 </body>
