--- a/Jokenpo-Navegador/index.html
+++ b/Jokenpo-Navegador/index.html
@@ -34,7 +34,7 @@
     </div>
 
 <div id="resutadoFinalPvb">
-    <h2>Escolha Do Player: <span id="user-choice"></span></h2>
+    <h2>Escolha Do Player: <span id="escolhaDoPlayer"></span></h2>
     <h2>Escolha Do bot: <span id="escolhaDoBot"></span></h2>
     <h2>Resultado: <span id="resultado"></span></h2>
 </div>
