--- a/Jokenpo-Navegador copy/index.html
+++ b/Jokenpo-Navegador copy/index.html
@@ -30,7 +30,7 @@
     
     <div>
         <button id="pgInicial" onclick="AtualizarPagina()">Voltar</button>
-        <button id="jogar">Jogar</button>
+        <button id="JogarPvb">Jogar</button>
     </div>
 
     <script src="script.js"></script>
