--- a/Jokenpo-Navegador copy/index.html
+++ b/Jokenpo-Navegador copy/index.html
@@ -18,7 +18,7 @@
     </div>
 
     <div id="nomeDosJogadores">
-        <input id="colocarNome" type="text" placeholder="Digite seu nome">
+        <input id="colocarNomeDoPlayer1" type="text" placeholder="Digite seu nome">
         <input id="enviarNomeDoPlayer1" type="submit" placeholder="Digite seu nome" onclick="ArmazenarNome();">
     </div>
 
