Pequeno Update para teste

--- a/Jokenpo-Navegador/index.html
+++ b/Jokenpo-Navegador/index.html
@@ -13,7 +13,7 @@
     </div>
 
     <div id="pvpEpvb">
-        <button class="chosePvp" id="pvpButton" onclick="PvpDisappear()">Pvp mode</button>
+        <button class="chosePvp" id="pvpButton" onclick="">Pvp mode</button>
         <button class="chosePvb" id="pvbButton" onclick="PvbDisappear();">Pvb mode</button>
     </div>
 
@@ -50,11 +50,7 @@
     <h2>Resultado: <span id="resultadoPvb"></span></h2>
 </div>
 
-<div id="resutadoFinalPvp">
-    <h2 id="escolhaPlayer">Escolha Do Player: <span id="escolhaDoPlayer"></span></h2>
-    <h2>Escolha Do bot: <span id="escolhaDoBot"></span></h2>
-    <h2>Resultado: <span id="resultadoPvp"></span></h2>
-</div>
+
     
 
     <script src="script.js"></script>
