--- a/Cliker-game/index.html
+++ b/Cliker-game/index.html
@@ -15,9 +15,12 @@
         <h2 id="Contador">Determinação:<span id="NumerosDoContador">0</span></h2>
         <img src="./Imagens/Determination.png" id="DeterminacaoPng">
     </div>
+
     <audio src="./audios/undertale-select-sound.mp3" id="AudioSelect"></audio>
+    <audio src="./audios/sqek.mp3" id="AudioCredit"></audio>
     <div id="Upgrades">
         <h3 id="TituloUpgrade">Upgrades</h3>
+        
         <div id="CaixaPaciencia">
             <p id="PreçoPaciencia">Paciencia: 30</p>
             <img src="./Imagens/Pacience.png" id="Pacience">
@@ -25,7 +28,7 @@
         </div>
 
         <div id="CaixaBondade">
-            <p>Bondade: 110</p>
+            <p id="PreçoBondade">Bondade: 110</p>
             <img src="./Imagens/Bondade.png" id="Bondade">
         </div>
 
