--- a/Cliker-game/Como-jogar/index2.html
+++ b/Cliker-game/Como-jogar/index2.html
@@ -15,6 +15,7 @@
         <img src="./Imagens/Exemplos.PNG" alt="">
         <p>Quanto mais Upgrades, mais<span>Determinação</span>por click você ganha.</p>
         <img src="./Imagens/Exemplos2.PNG" alt="">
+        <p>Futuramente vão ter novos conteudos em<span>2023</span>(ou não)</p>
     </div>
     
 </body>
