Click info fixed

--- a/Cliker-game/index.html
+++ b/Cliker-game/index.html
@@ -52,7 +52,7 @@
         <div>
             <p id="PreçoPerseverança">Perseverança: 680</p>
            <img src="./Imagens/Perseverança.png" id="Perseverança"> 
-           <!-- <p id="InfoPerseverança">2+ Determinação</p> -->
+           <p id="InfoPerseverança">3+ Determinação</p>
         </div>
         
         <div>
