--- a/Cliker-game/index.html
+++ b/Cliker-game/index.html
@@ -13,6 +13,7 @@
 <body>
     <div id="TodosOsClicks">
         <h2 id="Contador">Determinação:<span id="NumerosDoContador">0</span></h2>
+        <p class = "ShowClick">1</p>
         <img src="./Imagens/Determination.png" id="DeterminacaoPng">
         <a>Determinação por Click:<span id="Info">1</span></a>
     </div>
