--- a/Cliker-game/index.html
+++ b/Cliker-game/index.html
@@ -21,12 +21,13 @@
     
     <audio src="./audios/undertale-select-sound.mp3" id="AudioSelect"></audio>
     <audio src="./audios/sqek.mp3" id="AudioCredit"></audio>
+
     <div id="Upgrades">
-    <div id="Info">
+    <div>
         <a href="./Como-jogar/index2.html" id="ComoJogar">Como jogar?</a>
         <h3 id="TituloUpgrade">Upgrades</h3>
     </div>
-
+    
         <div id="CaixaPaciencia">
             <p id="PreçoPaciencia">Paciencia: 30</p>
             <img src="./Imagens/Pacience.png" id="Pacience">
