--- a/Cliker-game/index.html
+++ b/Cliker-game/index.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+    <link rel="icon" href="./Imagens/Determination.png" type="image/x-icon">
 </head>
 
 <body>
@@ -17,12 +18,20 @@
         <h2 id="Contador">Determinação:<span id="NumerosDoContador">0</span></h2>
         <p class="ShowClick">1</p>
         <img src="./Imagens/Determination.png" id="DeterminacaoPng">
+        <img src="./Imagens/Pacience.png" id="PacienceComprada">
+        <img src="./Imagens/Bondade.png" id="BondadeComprada">
+        <img src="./Imagens/Bravura (2).png" id="BravuraComprada">
+        <img src="./Imagens/Justice.png" id="JusticeComprada">
+        <img src="./Imagens/Perseverança.png" id="PerseverançaComprada">
+        <img src="./Imagens/Integridade.png" id="IntegridadeComprada">
         <a>Determinação por Click:<span id="Info">1</span></a>
     </div>
 
 
     <audio src="./audios/undertale-select-sound.mp3" id="AudioSelect"></audio>
     <audio src="./audios/sqek.mp3" id="AudioCredit"></audio>
+
+    
 
     <div id="Upgrades">
 
@@ -63,8 +72,9 @@
         </div>
 
         <div>
-            <p>Integridade: 800</p>
+            <p id="PreçoIntegridade">Integridade: 800</p>
             <img src="./Imagens/Integridade.png" id="Integridade">
+            <p id="InfoIntegridade">3+ Determinação</p>
         </div>
 
 
