--- a/Cliker-game/index.html
+++ b/Cliker-game/index.html
@@ -14,6 +14,9 @@
 </head>
 
 <body>
+    <div id="Fundo">
+
+    
     <div id="TodosOsClicks">
         <h2 id="Contador">Determinação:<span id="NumerosDoContador">0</span></h2>
         <p class="ShowClick">1</p>
@@ -24,19 +27,20 @@
         <img src="./Imagens/Justice.png" id="JusticeComprada">
         <img src="./Imagens/Perseverança.png" id="PerseverançaComprada">
         <img src="./Imagens/Integridade.png" id="IntegridadeComprada">
-        <a>Determinação por Click:<span id="Info">1</span></a>
+        <a id="ClickInfo">Determinação por Click:<span id="Info">1</span></a>
     </div>
 
 
     <audio src="./audios/undertale-select-sound.mp3" id="AudioSelect"></audio>
     <audio src="./audios/sqek.mp3" id="AudioCredit"></audio>
+    <audio src="./audios/savepoint.mp3" id="SavePoint"></audio>
 
     
 
     <div id="Upgrades">
 
         <div id="Buttons">
-            <p id="Zerar">Reset</p>
+            <p id="Reset">Reset</p>
             <a href="./Como-jogar/index2.html" id="ComoJogar">Como jogar?</a>
             <p id="TituloUpgrade">Upgrades</p>
         </div>
@@ -82,6 +86,7 @@
 
     <script src="script.js"></script>
     <footer>Made by @edu_mayash :)</footer>
+</div>
 </body>
 
 </html>
