--- a/Cliker-game/index.html
+++ b/Cliker-game/index.html
@@ -85,7 +85,7 @@
     </div>
 
     <script src="script.js"></script>
-    <footer>Made by @edu_mayash :)</footer>
+    <footer>Made by @edu_mayash</footer>
 </div>
 </body>
 
